# Multilingual-Online-Translator

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: translator.py
