[tool.poetry]
name = "multilingual-online-translator"
version = "0.1.0"
description = "Multilingual online translator based on reverso"
authors = ["Wiped Out"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
html5lib = "^1.1"
rich = "^9.2.0"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
